# collatz

./: .gitignore  README.md  pyproject.toml
src/collatz/: __init__.py  __main__.py
